[gd_scene load_steps=47 format=3 uid="uid://d1ahdwi2ft7k0"]

[ext_resource type="Script" path="res://Scenes/Restaurant/Player/player.gd" id="1_inif3"]
[ext_resource type="Texture2D" uid="uid://chohpc6frla8t" path="res://Assets/Characters/Player/big-player-idle-walk-spritesheet.png" id="2_rcufh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn0nk"]
size = Vector2(21.3333, 21.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_5x6jq"]
radius = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2c8pm"]
radius = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dba8b"]
atlas = ExtResource("2_rcufh")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bstoc"]
atlas = ExtResource("2_rcufh")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hppf6"]
atlas = ExtResource("2_rcufh")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rljr2"]
atlas = ExtResource("2_rcufh")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7fg4"]
atlas = ExtResource("2_rcufh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gaqp"]
atlas = ExtResource("2_rcufh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rg0l"]
atlas = ExtResource("2_rcufh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pmd7"]
atlas = ExtResource("2_rcufh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2hrp"]
atlas = ExtResource("2_rcufh")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkriw"]
atlas = ExtResource("2_rcufh")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cepj7"]
atlas = ExtResource("2_rcufh")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2m3a"]
atlas = ExtResource("2_rcufh")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fjry"]
atlas = ExtResource("2_rcufh")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dyji"]
atlas = ExtResource("2_rcufh")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lxtv"]
atlas = ExtResource("2_rcufh")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvxqy"]
atlas = ExtResource("2_rcufh")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lryu"]
atlas = ExtResource("2_rcufh")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk1uf"]
atlas = ExtResource("2_rcufh")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrqu"]
atlas = ExtResource("2_rcufh")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt8kb"]
atlas = ExtResource("2_rcufh")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b84k"]
atlas = ExtResource("2_rcufh")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb3y4"]
atlas = ExtResource("2_rcufh")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbwoa"]
atlas = ExtResource("2_rcufh")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2lac"]
atlas = ExtResource("2_rcufh")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8tca"]
atlas = ExtResource("2_rcufh")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxmt"]
atlas = ExtResource("2_rcufh")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq5qc"]
atlas = ExtResource("2_rcufh")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6dkt"]
atlas = ExtResource("2_rcufh")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyom8"]
atlas = ExtResource("2_rcufh")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyfjf"]
atlas = ExtResource("2_rcufh")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u06s"]
atlas = ExtResource("2_rcufh")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frwce"]
atlas = ExtResource("2_rcufh")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpg10"]
atlas = ExtResource("2_rcufh")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wleca"]
atlas = ExtResource("2_rcufh")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5b4"]
atlas = ExtResource("2_rcufh")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcert"]
atlas = ExtResource("2_rcufh")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r8sx"]
atlas = ExtResource("2_rcufh")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtp4"]
atlas = ExtResource("2_rcufh")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh6fu"]
atlas = ExtResource("2_rcufh")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lacg4"]
atlas = ExtResource("2_rcufh")
region = Rect2(320, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_msfce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dba8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bstoc")
}],
"loop": true,
"name": &"P1_B_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hppf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rljr2")
}],
"loop": true,
"name": &"P1_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7fg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gaqp")
}],
"loop": true,
"name": &"P1_F_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rg0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pmd7")
}],
"loop": true,
"name": &"P1_Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2hrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkriw")
}],
"loop": true,
"name": &"P1_Side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cepj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2m3a")
}],
"loop": true,
"name": &"P2_B_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fjry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dyji")
}],
"loop": true,
"name": &"P2_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lxtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvxqy")
}],
"loop": true,
"name": &"P2_F_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lryu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk1uf")
}],
"loop": true,
"name": &"P2_Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt8kb")
}],
"loop": true,
"name": &"P2_Side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b84k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb3y4")
}],
"loop": true,
"name": &"P3_B_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbwoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2lac")
}],
"loop": true,
"name": &"P3_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8tca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxmt")
}],
"loop": true,
"name": &"P3_F_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq5qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6dkt")
}],
"loop": true,
"name": &"P3_Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyom8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyfjf")
}],
"loop": true,
"name": &"P3_Side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u06s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frwce")
}],
"loop": true,
"name": &"P4_B_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpg10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wleca")
}],
"loop": true,
"name": &"P4_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcert")
}],
"loop": true,
"name": &"P4_F_Diagonal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r8sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtp4")
}],
"loop": true,
"name": &"P4_Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh6fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lacg4")
}],
"loop": true,
"name": &"P4_Side",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 2
collision_layer = 5
script = ExtResource("1_inif3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.57628e-07, 8)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_kn0nk")

[node name="interactRange" type="Area2D" parent="."]
position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactRange"]
shape = SubResource("CircleShape2D_5x6jq")

[node name="holdablePosition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="holdablePosition"]
shape = SubResource("CircleShape2D_2c8pm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_msfce")
animation = &"P4_Side"

[connection signal="area_entered" from="interactRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="interactRange" to="." method="_on_interact_range_area_exited"]
